--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
+    <script src="static/js/jquery.js"></script>
+    <script src="static/js/polyvplayer.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+
